[project]
name = "dataalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.27",
    "langchain-perplexity>=0.1.2",
    "langgraph>=0.5.2",
    "openai>=1.93.0",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.1",
]
